[project]
name = "beautiful-oops"
version = "0.1.0"
description = "Turning every error into insight — unified error capture and decision engine for intelligent systems."
readme = "README.md"
authors = [
    { name="Sean Liu", email="seanliu@nemovideo.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
]

[tool.setuptools.packages.find]
where = ["beautiful_oops"]

[project.urls]
Homepage = "https://github.com/SeanLiu-BJ/beautiful-oops"
Issues = "https://github.com/SeanLiu-BJ/beautiful-oops/issues"
